[DOC] Update docs
